# self-updating-loader

./: .gitignore  CMakeLists.txt  crypto.cpp  crypto.h  keygen.cpp  keys_output.txt  main.cpp  updater.cpp  updater.h  version.json
